--- a/vue-supabase/src/style.css
+++ b/vue-supabase/src/style.css
@@ -35,7 +35,11 @@ h1 {
   line-height: 1.1;
 }
 
+li{
+  display: inline;
+}
 button {
+  display: inline;
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
